Date fix, CDISC pilot links, typos

--- a/cmh/cmh_demo.Rmd
+++ b/cmh/cmh_demo.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "CMH Issue Demo"
 author: "Mike Stackhouse"
-date: "2/22/2021"
+date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: github_document
 ---
 
@@ -12,13 +12,13 @@ library(tidyverse)
 
 ## Backstory
 
-Within the original CDISC Pilot Project, the example CSR included the use of the CMH test. For portions of the analysis, the statistical analysis plan specifically calls out the following:
+Within the original [CDISC Pilot Project](https://bitbucket.cdisc.org/projects/CED/repos/sdtm-adam-pilot-project/browse), the example CSR included the use of the CMH test. For portions of the analysis, the statistical analysis plan specifically calls out the following:
 
 > Treatments will be compared for overall differences by Cochran-Mantel-Haentzel (CMH) test referred to in SAS(R) as “row mean scores differ,” 2 degrees of freedom. 
 
 While base R has the [`mantelhaen.test`](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/mantelhaen.test) function, unfortunately the alternative hypothesis specified in the CDISC Pilot Project is not available.
 
-There are several other packages that offer implementations of the CMH test, but the only one (at least that I ahve found) that offers the "row mean scores differ" alternative hypothesis is the package [`vcdExtra`](https://github.com/friendly/vcdExtra) through the function [`vcdExtra::CMHtest`](https://www.rdocumentation.org/packages/vcdExtra/versions/0.7-1/topics/CMHtest).
+There are several other packages that offer implementations of the CMH test, but the only one (at least that I have found) that offers the "row mean scores differ" alternative hypothesis is the package [`vcdExtra`](https://github.com/friendly/vcdExtra) through the function [`vcdExtra::CMHtest`](https://www.rdocumentation.org/packages/vcdExtra/versions/0.7-1/topics/CMHtest).
 
 Unfortunately, a problem arises with the CDISC pilot data, as can be seen in [this GitHub issue](https://github.com/friendly/vcdExtra/issues/3):
 
@@ -37,7 +37,7 @@ devtools::install_github("mstackhouse/vcdExtra")
 
 ## Data Preparation
 
-The data here are taken from the the [PHUSE Test Data Factory](https://advance.phuse.global/display/WEL/Test+Dataset+Factory) replication of the CDISC Pilot Project (original data aren't easily accessible at this point). 
+The data here are taken from the the [PHUSE Test Data Factory](https://advance.phuse.global/display/WEL/Test+Dataset+Factory) replication of the [CDISC Pilot Project](https://bitbucket.cdisc.org/projects/CED/repos/sdtm-adam-pilot-project/browse). 
 
 ```{r dataprep}
 cbic <- haven::read_xpt("https://github.com/phuse-org/TestDataFactory/raw/main/Updated/TDF_ADaM/adcibc.xpt") %>%
