--- a/cmh/cmh_demo.Rmd
+++ b/cmh/cmh_demo.Rmd
@@ -2,7 +2,7 @@
 title: "CMH Issue Demo"
 author: "Mike Stackhouse"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
-output: github_document
+output: html_notebook
 ---
 
 ```{r setup, include=FALSE}
