--- a/cmh/Docu/cmh_docu.Rmd
+++ b/cmh/Docu/cmh_docu.Rmd
@@ -41,8 +41,8 @@ In order to follow a systematic approach and to cover the 2x2xK as well as the g
 |---|---|---|---|---|
 |  1 | 2x2x2   | X = TRTP, Y = SEX, K = AGEGR1  | General Association | TRTP and AGEGR1 were limited to two categories, overall the the groups were rather balanced |   
 |   3| 2x2x3  | X = TRTP, Y = SEX, K = RACE  |  General Association |   Gives back NaN in R because RACE is very imbalanced|
-|   6| 2x5x2  | X = TRTP, Y = AVAL, K = SEX  |  Row Means |   Compare Row Means results for R and SAS|
-|   9|  3x5x17 |X = TRTP, Y = AVAL, K = SITEID   | Row Means   | SITEID has many strata and provokes sparse groups, AVAL is ordinal, therefore row means statistic applies here  | 
+|   6| 2x5x2  | X = TRTP, Y = AVAL, K = SEX  |  Row Means |   Compare Row Means results for R and SAS because Y is ordinal|
+|   9|  3x5x17 |X = TRTP, Y = AVAL, K = SITEID   | Row Means   | SITEID has many strata and provokes sparse groups, AVAL is ordinal, therefore row means statistic applies here, R threw an error  | 
 | 10 | 5x3x3  | X = AVAL, Y = AGEGR1, K = TRTP |  Correlation | X and Y are ordinal variables and therefore the correlation statistics has to be taken here |
 
 # Implementation
@@ -53,7 +53,8 @@ For the further documentation the CDSIC data were used and pre-processed:
 
 ```{r, eval = FALSE}
 ### pre-filtering data 
-haven::read_xpt("https://github.com/phuse-org/TestDataFactory/raw/main/Updated/TDF_ADaM/adcibc.xpt") %>% 
+library(haven)
+read_xpt("https://github.com/phuse-org/TestDataFactory/raw/main/Updated/TDF_ADaM/adcibc.xpt") %>% 
   filter(EFFFL == 'Y' & ITTFL == 'Y', AVISITN == 8 & ANL01FL=='Y') 
 
 ```
@@ -85,7 +86,7 @@ tibble::tribble(
   ~Package, ~`General Association`, ~`Row Means Differ`, ~`Nonzero Correlation`, ~`M-H Odds Ratio`, ~`Homogeneity Test`, ~Note,
  "stats::mantelhaen.test()", yes, no, no, yes, no, "Works well for 2x2xK",
  "vcdExtra::CMHtest()", yes,yes,yes,no,no,"Problems with sparsity, potential bug",
- "epiDisplay::mhor()", no,no,no,yes,yes,"Note"
+ "epiDisplay::mhor()", no,no,no,yes,yes,"OR are limited to 2x2xK design"
 ) %>%
   reactable::reactable(fullWidth = TRUE,defaultColDef = colDef(html = TRUE, align = "center"), columns = list(Note = colDef(width = 120), Package = colDef(width = 170)))
 ```
@@ -93,7 +94,7 @@ tibble::tribble(
 
 ### mantelhaen.test()
 
-This is included in a base installation of R, as part of the stats package. Requires inputting data as a *table*.
+This is included in a base installation of R, as part of the stats package. Requires inputting data as a *table* or as *vectors*.
 
 ```{r, eval = F}
 mantelhaen.test(x = data$x, y = data$y, z = data$k)
@@ -106,9 +107,10 @@ The vcdExtra package provides results for the generalized CMH test, for each of 
 
 ```{r, eval = FALSE}
 library(vcdExtra)
-CMHtest(Freq~X+Y|K,data=filtered_data, overall=TRUE) 
+CMHtest(Freq~X+Y|K,data=data, overall=TRUE) 
 ```
-
+  
+  
 #### Forked Version - Solution for sparse data
 
 To tackle the [issue with sparse data](https://github.com/friendly/vcdExtra/issues/3) it is recommended that a use of `solve()` is replaced with `MASS::ginv`. This was implemented in the forked version of vcdExtra which can be installed from here: 
@@ -202,9 +204,9 @@ As it can be seen, there are two schemata where R does not provide any results:
 readRDS(here::here('cmh/Docu/interim_update','table1a.RDS'))
 ```
 
-Reason for NaN in schema 3: Stratum k = AMERICAN INDIAN OR ALASKA NATIVE can not be compared because there are only values for one treatment and one gender.  
-Reason for Error 4: 
-> For large sparse table (many strata) CMHTest will occasionally throw a Error in solve.default(AVA) because of singularity
+**Reason for NaN in schema 3**:  Stratum k = AMERICAN INDIAN OR ALASKA NATIVE can not be compared because there are only values for one treatment and one gender.  
+**Reason for Error 4:**   
+For large sparse table (many strata) CMHTest will occasionally throw an error in solve.default(AVA) because of singularity
 
 
 
@@ -219,7 +221,13 @@ Only applicable to 2x2xK designs.
 ```{r, echo = F}
 readRDS(here::here('cmh/Docu/interim_update','table3.RDS'))
 ```
-We can see for cases where ... R and SAS deliver almost the same output. However, if xxx there appear differences. 
+
+
+# Summary and Recommendation
+
+Having explored the available R packages to calculate the CMH statistics, using R can only be recommended if the analysis design is equivalent to 2x2xK. Then, the base mantelhaen.test() function as well as the vcdExtra package show reliable results which are equal to the output of the SAS function. The same is true fot the common odds ratio even though there is a difference in decimals.  
+For the generalized version of the cmh test no R package can be recommended so far. SAS and R outputs differ substantially (because of the underlying functions used?) and the vcdExtra package seems to be bugged. 
+
 
 
 # References
