Finishing 50.1, except quadratic contrast

--- a/linear_models/Example 50.1 RCB with Means Comparisons/contrasts.Rmd
+++ b/linear_models/Example 50.1 RCB with Means Comparisons/contrasts.Rmd
@@ -4,7 +4,11 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(
+	echo = TRUE,
+	message = FALSE,
+	warning = FALSE
+)
 ```
 
 ## R Markdown
