begin work on 50.4

--- a/linear_models/Example 50.3 Unbalanced ANOVA for Two-Way Design with Interaction/E 50-3.Rmd
+++ b/linear_models/Example 50.3 Unbalanced ANOVA for Two-Way Design with Interaction/E 50-3.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Example 50.3"
+title: "Example 50.3 - Unbalanced ANOVA for Two-Way Design with Interactions"
 output: html_document
 ---
 
