--- a/cmh/Docu/final_report/cmh_final.Rmd
+++ b/cmh/Docu/final_report/cmh_final.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "CMH Test"
-author: "Clara Beck, Matthew Kumar & Aiming Yang"
+author: "Clara Beck, Matthew Kumar"
 date: "`r format(Sys.time(), '%B %d, %Y')`"
 output: 
   html_document:
@@ -14,28 +14,52 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# Cochran-Mantel-Haenszel Test - Background
+# Cochran-Mantel-Haenszel Test
+The CMH procedure tests for conditional independence in partial contingency tables for a 2 x 2 x K design. However, it can be generalized to tables of X x Y x K dimensions.
 
-The CMH procedure tests for conditional independence in partial contingency tables for a 2 x 2 x K design. However, it can be generalized to I x J x K tables (Agresti). 
+```{r, echo = FALSE, fig.align='center'}
+knitr::include_graphics('img.png')
+```
 
-Depending on the `scale` of the variables, different test statistics are computed, the number of degrees of freedom differs: 
+## Naming Convention
+For the remainder of this document, we adopt the following naming convention when referring to variables of a contingency table:
 
-- `general association` statistic (X and Y are treated as nominal) results in `(X-1) * (Y-1) dfs`
-- `row mean` scores statistic (X is nominal and Y is ordinal) results in `X-1 dfs`
-- `nonzero correlation` statistic (X and Y ordinal) results in `1 df`
+- X = exposure 
+ 
+- Y = response 
 
-To be consistent between SAS and R, the following naming conventions are used when referring to variables below: 
+- K = control  
 
-X = exposure 
+## Scale
+The `scale` of the exposure (X) and response (Y) variables dictate which test statistic is computed for the contingency table. Each test statistic is evaluated on different degrees of freedom (df):
 
-Y = response 
+- `General association` statistic (X and Y both nominal) results in `(X-1) * (Y-1) dfs`
 
-K = control 
+- `Row mean` scores statistic (X is nominal and Y is ordinal) results in `X-1 dfs`
+
+- `Nonzero correlation` statistic (X and Y both ordinal) results in `1 df`
 
 
-# Testing Schemata
 
-In order to follow a systematic approach and to cover the 2x2xK as well as the generalized CMH test multiple data schemata were tested. Also, some edge cases with sparse data were used. From the original 10 schemata, we selected four which demonstrate the main issues: 
+# Testing Strategy
+
+## Data
+
+To begin investigating the differences in the SAS and R implementations of the CMH test, we decided to use the CDISC Pilot data set, which is publicly available on the PHUSE Test Data Factory repository. We applied very basic filtering conditions upfront (see below) and this data set served as the basis of the examples to follow.
+
+```{r, eval = FALSE}
+# Download CDISC Pilot Dataset
+# Perform filtering
+library(haven)
+read_xpt("https://github.com/phuse-org/TestDataFactory/raw/main/Updated/TDF_ADaM/adcibc.xpt") %>% 
+  filter(EFFFL == 'Y' & ITTFL == 'Y', AVISITN == 8 & ANL01FL=='Y') 
+
+```
+
+## Schemes
+In order to follow a systematic approach to testing, and to cover variations in the CMH test, we considered the traditional 2 x 2 x K design as well as scenarios where the generalized CMH test is employed (e.g. 5 x 3 x  3).
+
+We present 5 archetype test scenarios that illustrate diverging results, possibly related to sparse data and possibly considered edge cases.
 
 | Number  | Schema |  Variables | Relevant Test | Description |   
 |---|---|---|---|---|
@@ -47,32 +71,19 @@ In order to follow a systematic approach and to cover the 2x2xK as well as the g
 
 # Implementation
 
-## Data 
+## CMH in SAS 
+The cmh test is calculated in SAS using the PROC FREQ procedure. By default, it outputs the chi square statistic, degrees of freedom and p-value for each of the three alternative hypothesis: `general association`, `row means differ`, and `nonzero correlation`. It is up to the statistical analyst or statistician to know which result is appropriate for their analysis.
 
-For the further documentation the CDSIC data were used and pre-processed: 
+When the design of the contingency table is 2 x 2 x K (i.e, X == 2 levels, Y == 2 levels, K >= 2 levels), the Mantel-Haenszel Common Odds Ratio (odds ratio estimate, 95% CI, P-value) and the Breslow-Day Test for Homogeneity of the Odds Ratios (chi-square statistic, degrees of freedom, P-value) are also output.
 
-```{r, eval = FALSE}
-### pre-filtering data 
-library(haven)
-read_xpt("https://github.com/phuse-org/TestDataFactory/raw/main/Updated/TDF_ADaM/adcibc.xpt") %>% 
-  filter(EFFFL == 'Y' & ITTFL == 'Y', AVISITN == 8 & ANL01FL=='Y') 
-
-```
-
-
-## In SAS 
-
-The cmh test is calculated in SAS using the PROC FREQ procedure. By default, it outputs the chi square statistic, degrees of freedom and p-value for each of the three alternative hypothesis: `general association`, `row means differ`, and `nonzero correlation`.
-
-When the design of the contingency table is 2x2xK (i.e, X == 2 levels, Y == 2 levels, K >= 2 levels), the Mantel-Haenszel Common Odds Ratio (odds ratio estimate, 95% CI, P-value) and the Breslow-Day Test for Homogeneity of the Odds Ratios (chi-square statistic, degrees of freedom, P-value) are also output.
-
+Below is the syntax to conduct a CMH analysis in SAS:
 ```{r, eval = FALSE}
 Proc freq data = filtered_data; 
 tables K * X * Y / cmh; 
+* the order of K, X, and Y appearing on the line is important!;
 run; 
 
 ```
-
 
 ## In R 
 
@@ -91,7 +102,6 @@ tibble::tribble(
   reactable::reactable(fullWidth = TRUE,defaultColDef = colDef(html = TRUE, align = "center"), columns = list(Note = colDef(width = 120), Package = colDef(width = 170)))
 ```
 
-
 ### mantelhaen.test()
 
 This is included in a base installation of R, as part of the stats package. Requires inputting data as a *table* or as *vectors*.
@@ -100,16 +110,14 @@ This is included in a base installation of R, as part of the stats package. Requ
 mantelhaen.test(x = data$x, y = data$y, z = data$k)
 ```
 
-
 ### CMHtest()
 
 The vcdExtra package provides results for the generalized CMH test, for each of the three model it outputs the Chi-square value and the respective p-values. Flexible data input methods available: *table* or *formula* (aggregated level data in a data frame).
 
 ```{r, eval = FALSE}
 library(vcdExtra)
-CMHtest(Freq~X+Y|K,data=data, overall=TRUE) 
+CMHtest(Freq ~ X + Y | K , data=data, overall=TRUE) 
 ```
-  
   
 #### Forked Version - Solution for sparse data
 
@@ -121,7 +129,7 @@ devtools::install_github("mstackhouse/vcdExtra")
 However, also the forked version for the vcdExtra package works only until a certain level of sparsity. In case of our data, it still works if the data are stratified by the pooled Site ID (SITEGR1 - 11 unique values) whereas using the unpooled Site ID (SITEID - 17 unique values) also throws an error. 
 
 
-#### Bug 
+#### Inconsistent Results 
 
 Exploring the vcdExtra package in detail we realized that there seems to be a bug in the implementation which we would like to highlight here.
 
@@ -157,8 +165,7 @@ When we specify the analysis using an explicit *type* argument, we get the follo
 CMHtest(Freq~x+y|k, data=test_eg, overall=TRUE, details=TRUE, type = "ALL")$ALL$table
 ```
 
-While we've essentially asked for everything (i.e. the default), albiet explicitly, the results do not match. The degrees of freedom seem to be mismatched with results in wrong p-values (if we assume SAS is the gold standard)
-
+While we've essentially asked for everything (i.e. the default), albeit explicitly, the results do not match. The degrees of freedom seem to be mismatched with results in wrong p-values (if we assume SAS is the gold standard)
 
 Similarly, if we specify we would *only* like certain tests returned, the results seem dependent on the order of specification:
 
@@ -174,7 +181,7 @@ CMHtest(Freq~x+y|k, data=test_eg, overall=TRUE, details=TRUE, types=c("rmeans","
 
 Impact: In the event of a 2x2xK design, all 3 test statistics, degrees of freedom and p-values are the same. Therefore, specifying a 2x2xK analysis any of the ways above results in correct "answer", though they are technically mixed up. 
 
-This is why we chose as a 3x2x2, so we can clearly where things are mixed up. 
+This is why we chose as a 3x2x2, so we can clearly *where* things are mixed up. 
 
 We are planning to submit an issue to the vcdExtra github for the author's review.
 
@@ -187,7 +194,6 @@ library(epiDisplay)
 mhor(x,y,k, graph = FALSE)
 ```
 
-
 # Results
 
 Here the results can be seen: 
@@ -196,7 +202,6 @@ Here the results can be seen:
 ```{r, echo = F, warning = FALSE}
 readRDS(here::here('cmh/Docu/interim_update','table1b.RDS'))
 ```
-  
   
 As it can be seen, there are two schemata where R does not provide any results:
 
@@ -207,8 +212,6 @@ readRDS(here::here('cmh/Docu/interim_update','table1a.RDS'))
 **Reason for NaN in schema 3**:  Stratum k = AMERICAN INDIAN OR ALASKA NATIVE can not be compared because there are only values for one treatment and one gender.  
 **Reason for Error 4:**   
 For large sparse table (many strata) CMHTest will occasionally throw an error in solve.default(AVA) because of singularity
-
-
 
 ## Odds Ratio
 Only applicable to 2x2xK designs.
@@ -222,11 +225,12 @@ Only applicable to 2x2xK designs.
 readRDS(here::here('cmh/Docu/interim_update','table3.RDS'))
 ```
 
-
 # Summary and Recommendation
 
-Having explored the available R packages to calculate the CMH statistics, using R can only be recommended if the analysis design is equivalent to 2x2xK. Then, the base mantelhaen.test() function as well as the vcdExtra package show reliable results which are equal to the output of the SAS function. The same is true fot the common odds ratio even though there is a difference in decimals.  
-For the generalized version of the cmh test no R package can be recommended so far. SAS and R outputs differ substantially (because of the underlying functions used?) and the vcdExtra package seems to be bugged. 
+Having explored the available R packages to calculate the CMH statistics, using R can only be recommended if the analysis design is equivalent to 2 x 2 x K. Then, the base mantelhaen.test() function as well as the vcdExtra package show reliable results which are equal to the output of the SAS function. The same is true for the common odds ratio even though there is a marked difference in decimals.  
+
+For the generalized version of the cmh test no R package can be recommended so far. SAS and R outputs differ substantially (possibly due to the underlying subroutines or functions) and the vcdExtra package seems to deliver inconsistent results outside the 2 x 2 x K design.
+
 
 
 
